// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer default 1`] = `
Object {
  "esplanadeAddrs": Object {
    "candidate": Object {
      "address": "0x0",
      "balance": 0,
    },
    "moderator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolAddrs": Object {
      "cold": Array [],
      "custodian": Array [],
      "hot": Array [],
      "otherContract": Array [],
    },
  },
  "esplanadeStates": Object {
    "isStarted": false,
    "lastOperationTime": 0,
    "operationCoolDown": 0,
    "poolSizes": Object {
      "cold": 0,
      "custodian": 0,
      "hot": 0,
      "otherContract": 0,
    },
    "votingStage": "",
  },
  "subscription": 0,
}
`;

exports[`ui reducer espAddrs 1`] = `
Object {
  "esplanadeAddrs": Object {
    "candidate": Object {
      "address": "0x0",
      "balance": 0,
    },
    "moderator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolAddrs": Object {
      "cold": Array [],
      "custodian": Array [],
      "hot": Array [],
      "otherContract": Array [],
    },
  },
  "esplanadeStates": Array [
    Object {
      "esplanadeStates": "test",
    },
  ],
  "subscription": 0,
}
`;

exports[`ui reducer espStates 1`] = `
Object {
  "esplanadeAddrs": Object {
    "candidate": Object {
      "address": "0x0",
      "balance": 0,
    },
    "moderator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolAddrs": Object {
      "cold": Array [],
      "custodian": Array [],
      "hot": Array [],
      "otherContract": Array [],
    },
  },
  "esplanadeStates": Array [
    Object {
      "esplanadeStates": "test",
    },
  ],
  "subscription": 0,
}
`;

exports[`ui reducer espSubscription 1`] = `
Object {
  "esplanadeAddrs": Object {
    "candidate": Object {
      "address": "0x0",
      "balance": 0,
    },
    "moderator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolAddrs": Object {
      "cold": Array [],
      "custodian": Array [],
      "hot": Array [],
      "otherContract": Array [],
    },
  },
  "esplanadeStates": Array [
    Object {
      "esplanadeStates": "test",
    },
  ],
  "subscription": Array [
    Object {
      "subscription": "test",
    },
  ],
}
`;
